use vms in views

--- a/WebApplication5/Views/User/Login.cshtml
+++ b/WebApplication5/Views/User/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoginViewModel
+﻿@model WebApplication5.ViewModels.User.LoginViewModel
 
 
 <div class="content-section ml-auto mr-auto mt-3">
