put viewdata auth checks

--- a/WebApplication5/Views/User/Login.cshtml
+++ b/WebApplication5/Views/User/Login.cshtml
@@ -28,7 +28,7 @@
 
     <div class="border-top pt-3">
         <small class="text-muted">
-            Don't have an account? @Html.ActionLink("Sign in here", "Register", "User", htmlAttributes: new TModel{ @class="ml-2" })
+            Don't have an account? @Html.ActionLink("Sign in here", "Register", "User", htmlAttributes: new { @class="ml-2" })
         </small>
     </div>
 </div>
