--- a/WebApplication5/Views/Shared/DeleteModal.cshtml
+++ b/WebApplication5/Views/Shared/DeleteModal.cshtml
@@ -1,4 +1,4 @@
-﻿@model DeleteModalViewModel
+﻿@model WebApplication5.ViewModels.Shared.DeleteModalViewModel
 
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
