--- a/WebApplication5/Views/Home/Search.cshtml
+++ b/WebApplication5/Views/Home/Search.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = $"\"{Model.SearchQuery}\" Search Results";
 }
 
-@model WebApplication5.ViewModels.Home.SearchResultsViewModel
+@model WebApplication5.ViewModels.Home.SearchViewModel
 
 
 <div class="row align-items-start">
