fix naming in views

--- a/WebApplication5/Views/Home/Index.cshtml
+++ b/WebApplication5/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row align-items-start">
     <div class="d-flex justify-content-between">
-        <h1>@Model.QuestionsTitle</h1>
+        <h1>All Questions</h1>
         <div class="ml-2 mt-auto mb-auto">
             @Html.Partial("~/Views/Shared/AskQuestion.cshtml")
         </div>
