--- a/WebApplication5/Views/QuestionAndAnswer/QuestionAnswer.cshtml
+++ b/WebApplication5/Views/QuestionAndAnswer/QuestionAnswer.cshtml
@@ -86,7 +86,7 @@
             <div>
                 @Html.ActionLink("Update", "Update", "Answer", new { @AnswerId = ans.Id })
                 <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
-                @Html.Partial("~/Shared/DeleteModal.cshtml", Model.DeleteAnswerModel)
+                @Html.Partial("~/Shared/DeleteModal.cshtml")
             </div>
         }
     </article>
