--- a/WebApplication5/Views/QuestionAndAnswer/QuestionUpdate.cshtml
+++ b/WebApplication5/Views/QuestionAndAnswer/QuestionUpdate.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Question
 
-<h1>Ask a thought-out question to the programming community</h1>
+<h1>Edit question</h1>
 
 
 @section Head {
@@ -13,21 +13,20 @@
 
         <div class="form-group">
             <label for="title">Title</label>
-            <label for="title">Make sure your title is concise and specific.</label>
-            <input class="form-control form-control-lg" type="text" placeholder="Title" />
+            <input class="form-control form-control-lg" type="text" placeholder="Title" value="@Model.Title" />
         </div>
 
         <div class="form-group">
             <label for="editor">Content</label>
-            <label for="editor">Elaborate on your title here and what you wanted your code to do.</label>
-            <div id="editor" class="form-control"></div>
+            <div id="editor" class="form-control">
+                @Html.Raw(Model.Content)
+            </div>
             <input type="hidden" id="quill-question-content" asp-for="@Model.Content" />
         </div>
 
         <div class="form-group">
             <label for="TagQuery">Tags</label>
-            <label for="TagQuery">Categorize your question by adding up to 5 tags.</label>
-            <input class="dropdown-item" name="tagify" id="TagQuery" autofocus>
+            <input class="dropdown-item" name="tagify" id="TagQuery" value="@Model.TagStr" autofocus>
             <input type="hidden" id="tags" asp-for="@Model.Tags" />
         </div>
 
@@ -42,14 +41,14 @@
     <script src="https://cdn.jsdelivr.net/npm/@@yaireo/tagify"></script>
     <script>
         var questionQuill = new Quill('#editor', {
-          modules: {
-            toolbar: [
-              [{ header: [1, 2, false] }],
-              ['bold', 'italic', 'underline'],
-              ['image', 'code-block']
-            ]
-          },
-          theme: 'snow'
+            modules: {
+                toolbar: [
+                    [{ header: [1, 2, false] }],
+                    ['bold', 'italic', 'underline'],
+                    ['image', 'code-block']
+                ]
+            },
+            theme: 'snow'
         });
 
         function handleQuestionSubmit() {
