--- a/WebApplication5/Views/QuestionAndAnswer/_AnswerUpdate.cshtml
+++ b/WebApplication5/Views/QuestionAndAnswer/_AnswerUpdate.cshtml
@@ -1,39 +1,52 @@
-﻿@model Answer
+﻿@model WebApplication5.ViewModels.QuestionAndAnswer.AnswerUpdateViewModel
 
 @* partial view in QuestionAnswer *@
 
-<div class="content-section mt-2">
-    <h3>Edit answer</h3>
-    <form id="form" asp-controller="Answer" asp-action="AnswerUpdate" onsubmit="handleAnswerUpdateSubmit()">
-        @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            <label for="editor">Content</label>
-            <div id="update-editor" class="form-control">@Html.Raw(Model.Content)</div>
-            <input type="hidden" id="quill-answer-update-content" asp-for="@Model.Content" />
-        </div>
+<div class="modal fade" id="updateAnswerModal" tabindex="-1" role="dialog" aria-labelledby="updateAnswerModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="updateAnswerModalLabel">Edit Answer</h5>
+            </div>
+            <div class="modal-content">
+                <div class="content-section mt-2">
+                    <h3>Edit answer</h3>
+                    <form id="form" asp-controller="Answer" asp-action="AnswerUpdate" onsubmit="handleAnswerUpdateSubmit()">
+                        @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            <input type="submit" name="submit" class="btn btn-outline-info" value="Update Answer" />
+                        <div class="form-group">
+                            <label for="editor">Content</label>
+                            <div id="update-editor" class="form-control">@Html.Raw(Model.Content)</div>
+                            <input type="hidden" id="quill-answer-update-content" asp-for="@Model.Content" />
+                        </div>
+
+                        <div class="form-group">
+                            <input type="submit" name="submit" class="btn btn-outline-info" value="Update Answer" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            </div>
         </div>
-    </form>
+    </div>
 </div>
 
-@section Scripts {
-    <script>
-        var answerUpdateQuill = new Quill('#update-editor', {
-          modules: {
-            toolbar: [
-              [{ header: [1, 2, false] }],
-              ['bold', 'italic', 'underline'],
-              ['image', 'code-block']
-            ]
-          },
-          theme: 'snow'
-        });
+<script>
+    var answerUpdateQuill = new Quill('#update-editor', {
+        modules: {
+        toolbar: [
+            [{ header: [1, 2, false] }],
+            ['bold', 'italic', 'underline'],
+            ['image', 'code-block']
+        ]
+        },
+        theme: 'snow'
+    });
 
-        function handleAnswerUpdateSubmit() {
-            document.getElementById('quill-answer-update-content').value = JSON.stringify(answerUpdateQuill.getContents());
-        }
-    </script>
-}
+    function handleAnswerUpdateSubmit() {
+        document.getElementById('quill-answer-update-content').value = JSON.stringify(answerUpdateQuill.getContents());
+    }
+</script>
