--- a/WebApplication5/Views/QuestionAndAnswer/QuestionAnswer.cshtml
+++ b/WebApplication5/Views/QuestionAndAnswer/QuestionAnswer.cshtml
@@ -83,6 +83,9 @@
 
             @if (User.Claims.Where(c => c.Value == ans.Author.Id.ToString()).Any())
             {
+                Model.AnswerUpdateForm.AssociatedQuestion = Model.Question;
+                Model.AnswerUpdateForm.OriginalAnswer = ans;
+                
                 <div>
                     <button type="button" class="btn btn-primary btn-sm m-1" data-toggle="modal" data-target="#updateAnswerModal">Update</button>
                     @Html.Partial("~/QuestionAndAnswer/_AnswerUpdate.cshtml", Model.AnswerUpdateForm)
