--- a/WebApplication5/Views/Answer/_AnswerCreate.cshtml
+++ b/WebApplication5/Views/Answer/_AnswerCreate.cshtml
@@ -12,6 +12,7 @@
             <label for="editor">Be sure to answer with an explanation on why your solution works.</label>
             <div id="editor" class="form-control"></div>
             <input type="hidden" id="quill-answer-content" asp-for="@Model.Content" />
+            <input type="hidden" id="quill-answer-truncated-content" asp-for="@Model.TruncatedContent" />
         </div>
 
         <div class="form-group">
@@ -35,6 +36,7 @@
 
         function handleAnswerSubmit() {
             document.getElementById('quill-answer-content').value = JSON.stringify(answerQuill.getContents());
+            document.getElementById('quill-answer-truncated-content').value = answerQuill.getText().slice(0, 167) + "...";
         }
     </script>
 }
