--- a/WebApplication5/Views/Question/QuestionAnswer.cshtml
+++ b/WebApplication5/Views/Question/QuestionAnswer.cshtml
@@ -48,7 +48,7 @@
         @Html.ActionLink("Update", "QuestionUpdate", "Question", new { @QuestionId = Model.Question.Id })
 
         <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
-        @Html.Partial("~/Shared/DeleteModal.cshtml", new DeleteModalViewModel() 
+        @Html.Partial("~/Shared/_DeleteModal.cshtml", new DeleteModalViewModel() 
             { Action="DeleteQuestion", DomainName="Question", Controller="Question" } )
     </div>
 </article>
@@ -91,7 +91,7 @@
                     @Html.Partial("~/QuestionAndAnswer/_AnswerUpdate.cshtml", Model.AnswerUpdateForm)
 
                     <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
-                    @Html.Partial("~/Shared/DeleteModal.cshtml", new DeleteModalViewModel()
+                    @Html.Partial("~/Shared/_DeleteModal.cshtml", new DeleteModalViewModel()
                         { Action="DeleteAnswer", DomainName="Answer", Controller="Answer" } )
                 </div>
             }
