--- a/WebApplication5/Views/Home/Search.cshtml
+++ b/WebApplication5/Views/Home/Search.cshtml
@@ -11,9 +11,9 @@
 
 <div class="row align-items-start">
     <div class="d-flex justify-content-between">
-        <h1>@Model.QuestionsTitle</h1>
+        <h1>Search Results</h1>
         <div class="ml-2 mt-auto mb-auto">
-            @Html.Partial("~/Views/Shared/AskQuestion.cshtml")
+            @Html.Partial("~/Views/Shared/_AskQuestion.cshtml")
         </div>
     </div>
     
